# logdiag

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NEWS  README.adoc  README.md  ToolchainCrossMinGW.cmake  ToolchainCrossMinGWW64.cmake  ToolchainCrossWin64.cmake  ToolchainDebianMinGW.cmake  ToolchainDebianMinGWW64.cmake  Win32Depends.cmake  Win64Depends.sh  config.h.in
cmake/: FindCppCheck.cmake  FindGTK2.cmake  FindGettext.cmake  FindGtkDoc.cmake  FindJsonGlib.cmake  FindLibIntl.cmake  ProcessArguments.cmake
docs/user-guide/: stylesheet.css  user-guide-cs.asciidoc  user-guide-cs.html  user-guide-cs.tex  user-guide-en.asciidoc  user-guide-en.html  user-guide-en.tex
liblogdiag/: ld-canvas.c  ld-canvas.h  ld-category-symbol-view.c  ld-category-symbol-view.h  ld-category-tree-view.c  ld-category-tree-view.h  ld-category-view-if.c  ld-category-view-if.h  ld-category-view.c  ld-category-view.h  ld-category.c  ld-category.h  ld-diagram-connection.c  ld-diagram-connection.h  ld-diagram-object.c  ld-diagram-object.h  ld-diagram-symbol.c  ld-diagram-symbol.h  ld-diagram-view.c  ld-diagram-view.h  ld-diagram.c  ld-diagram.h  ld-library-pane.c  ld-library-pane.h  ld-library-toolbar.c  ld-library-toolbar.h  ld-library.c  ld-library.h  ld-lua-private.h  ld-lua-symbol-private.h  ld-lua-symbol.c  ld-lua-symbol.h  ld-lua.c  ld-lua.h  ld-marshal.c  ld-marshal.h  ld-marshal.list  ld-symbol-category.c  ld-symbol-category.h  ld-symbol.c  (+6 more)
po/: cs.po  de.po  logdiag.pot  make-template.sh  pl.po  sk.po
share/: logdiag.desktop  logdiag.gresource.xml  logdiag.gschema.xml  logdiag.manifest  logdiag.rc  logdiag.xml  org.logdiag.gschema.xml
share/gui/: window-main.ui
src/: canvas.c  canvas.h  document.h  ld-canvas.c  ld-canvas.h  ld-diagram-object.c  ld-diagram-symbol.c  ld-diagram-symbol.h  ld-diagram.c  ld-diagram.h  ld-document-object.c  ld-document-object.h  ld-document-symbol.c  ld-document-symbol.h  ld-document.c  ld-document.h  ld-library.c  ld-library.h  ld-lua-symbol-private.h  ld-lua-symbol.c  ld-lua-symbol.h  ld-lua.c  ld-lua.h  ld-marshal.c  ld-symbol-category.c  ld-symbol-category.h  ld-symbol-library.c  ld-symbol-library.h  ld-symbol.c  ld-symbol.h  ld-types.c  ld-types.h  ld-window-main.c  ld-window-main.h  liblogdiag.h  logdiag.c  main.c  symbol-category.h  symbol-library.c  symbol-library.h  (+3 more)
tests/: diagram.c  point-array.c
